--- a/mean-app/src/app/posts/post-create/post-create.component.html
+++ b/mean-app/src/app/posts/post-create/post-create.component.html
@@ -1,4 +1,8 @@
-<textarea rows = "6" [(ngModel)] = "enteredValue"></textarea>
-<hr>
-<button (click) = 'onAddPost()'>Save post</button>
+<mat-card>
+  <mat-form-field>
+    <textarea matInput rows = "6" [(ngModel)] = "enteredValue"></textarea>
+  </mat-form-field>
+  <button mat-raised-button (click) = 'onAddPost()'>Save post</button>
+</mat-card>
+
 <p>{{ newPost }}</p>
