--- a/mean-app/src/app/app.component.html
+++ b/mean-app/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1>My First App</h1>
-<app-post-create></app-post-create>
+<app-header></app-header>
+<main>
+  <app-post-create></app-post-create>
+  <app-post-list></app-post-list>
+</main>
+
 
