--- a/mean-app/src/app/posts/post-create/post-create.component.html
+++ b/mean-app/src/app/posts/post-create/post-create.component.html
@@ -1,8 +1,35 @@
 <mat-card>
-  <mat-form-field>
-    <textarea matInput rows = "6" [(ngModel)] = "enteredValue"></textarea>
-  </mat-form-field>
-  <button mat-raised-button (click) = 'onAddPost()'>Save post</button>
+  <form (submit) = "onAddPost(postForm)" #postForm = "ngForm">
+    <mat-form-field>
+      <input
+        matInput
+        type = "text"
+        name = "title"
+        ngModel
+        required
+        minlength = "3"
+        placeholder = "Post Title"
+        #title = "ngModel">
+        <mat-error *ngIf="title.invalid">Please enter a post title!</mat-error>
+    </mat-form-field>
+    <mat-form-field>
+      <textarea
+        matInput
+        rows = "4"
+        name = "content"
+        ngModel
+        required
+        minlength = "3"
+        placeholder = "Post Content"
+        #content = "ngModel">
+      </textarea>
+        <mat-error *ngIf="content.invalid">Please enter a post content!</mat-error>
+    </mat-form-field>
+    <button
+      mat-raised-button
+      color = "primary"
+      type = "submit">Save post
+    </button>
+  </form>
 </mat-card>
 
-<p>{{ newPost }}</p>
