--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -25,7 +25,7 @@
     </mat-form-field>
     <button
       mat-raised-button
-      color="accent"
+      color="primary"
       type="submit">Save Post</button>
   </form>
 </mat-card>
